Add HtmlWebpackPlugin for script injection

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="flex items-center">
       <div class="flex items-center">
-        <img src="assets/unlock.png" alt="small logo" class="w-4 h-4 mr-3 opacity-50">
+        <img src="assets/unlock.png" alt="unlock logo" class="w-4 h-4 mr-3 opacity-50">
         <a class="opacity-50 mr-3" href="#">Editing</a>
       </div>
       <select class="appearance-none border-none text-blue-600 font-bold mr-4" name="space" id="space">
@@ -38,15 +38,15 @@
         <i class="fa-regular fa-clock"></i>
         <span>0min</span>
       </div>
-      <img src="assets/rabbit.png" alt="small logo">
+      <img src="assets/rabbit.png" alt="rabbit logo">
       <div class="flex opacity-50 border-l-2 border-gray-500/50 pl-2">
-        <img src="assets/arrow.png" alt="small logo">
+        <img src="assets/arrow.png" alt="arrow logo">
         <span>0</span>
       </div>
     </div>
     <div class="flex space-x-4 items-center mr-2">
-      <img src="assets/check.png" alt="small logo" class="w-6 opacity-50">
-      <img src="assets/cloud.png" alt="small logo">
+      <img src="assets/check.png" alt="check logo" class="w-6 opacity-50">
+      <img src="assets/cloud.png" alt="cloud logo">
       <i class="fa-solid fa-lg fa-ellipsis-vertical"></i>
     </div>
   </div>
@@ -64,6 +64,5 @@
     </div>
   </section>
 </div>
-  <script src="./bundle.js"></script>
 </body>
 </html>
